<resources>
    <string name="app_name">Video Player</string>

    <string name="mainDialogRequestPermissionTitle">Request Permission</string>
    <string name="mainDialogRequestPermissionContent">We need your access to load the video on your device.</string>
    <string name="mainDialogRequestPermissionPositive">Commit</string>
    <string name="mainDialogRequestPermissionNegative">Exit</string>

    <string name="menuOptionMainRefresh">Refresh</string>
    <string name="menuOptionMainSetting">Setting</string>
    <string name="menuOptionMainAbout">About</string>
    <string name="menuOptionMainExit">Exit</string>
    <string name="menuOptionPlaySetting">Setting</string>
    <string name="menuOptionPlayVideoInfo">Video Information</string>

    <string name="mainVideos">Video</string>
    <string name="mainUnknownVideoDuration">Unknown Duration</string>

    <string name="playAlwaysOnProgressDefaultText">00:00 / 00:00</string>
    <string name="playAlwaysOnInfoDefaultText">00:00 100%</string>
    <string name="playVideoNotExist">Video not exist,please check the video\'s path.</string>
    <string name="playErrorAndPlayNext">Error occur,playing next video</string>
    <string name="playError">Error occur,please check the video</string>
    <string name="playDialogDefaultPositiveText">OK</string>
    <string name="playDialogVideoName">Name</string>
    <string name="playDialogVideoPath">Path</string>
    <string name="playDialogVideoDuration">Duration</string>
    <string name="playDialogVideoWidth">Width</string>
    <string name="playDialogVideoHeight">Height</string>
    <string name="playDialogVideoSize">Size</string>
    <string name="playDialogPlayerNotReady">Player not ready,please try again</string>

    <string name="dialogPlayError">Play failed</string>
    <string name="dialogVideoNotExist">Video not exist</string>

    <string name="prefCatalogDisplay">Display Setting</string>
    <string name="prefCatalogDisplayAlwaysOnInfoTitle">Always show device information</string>
    <string name="prefCatalogDisplayAlwaysOnInfoSummary">Show current time and battery on the top right of the screen</string>
    <string name="prefCatalogDisplayAlwaysOnProgressTitle">Always show video progress information</string>
    <string name="prefCatalogDisplayAlwaysOnProgressSummary">Show video progress on the top left of the screen</string>
    <string name="prefCatalogGesture">Gesture Setting</string>
    <string name="prefCatalogGestureVolumeTitle">Volume gesture</string>
    <string name="prefCatalogGestureVolumeSummary">Vertically scroll right side of screen to adjust volume</string>
    <string name="prefCatalogGestureBrightnessTitle">Brightness Gesture</string>
    <string name="prefCatalogGestureBrightnessSummary">Vertically scroll left side of screen to adjust brightness</string>
    <string name="prefCatalogGestureProgressTitle">Progress gesture</string>
    <string name="prefCatalogGestureProgressSummary">Horizontally scroll the screen to adjust the video progress</string>
    <string name="prefCatalogGestureDoubleTapPlayOrPauseTitle">Double tap gesture</string>
    <string name="prefCatalogGestureDoubleTapPlayOrPauseSummary">Double tap the screen to pause / play</string>

    <string name="settingTitle">Setting</string>

    <string name="aboutTitle">About</string>
    <string name="aboutVersion">Version</string>
    <string name="aboutUnknownVersion">Unknow Version</string>
</resources>
